--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Site settings
 title: terrehbyte
 email: terreh@terrehbyte.com
-description: "Jekyll Test; Please Ignore"
+description: "If you're reading this, then it means that I'm actually putting work into getting the Jekyll variant of my website working!"
 baseurl: ""
 url: "http://github.terrehbyte.com"
 twitter_username: terrehbyte
 github_username:  terrehbyte
 
 # Build settings
-markdown: kramdown
-permalink: pretty
-
-# Markdown settings
-kramdown:
-    input: GFM
+markdown: redcarpet
+redcarpet:
+  extensions:
+    - hard_wrap
+    - no_intra_emphasis
+    - autolink
+    - strikethrough
+    - fenced_code_blocks
 
 encoding: utf-8
-
 timezone: US/Pacific
-
 highlighter: pygments
 
 permalink: /:year/:month/:day/:title/
