Added basic pagination

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "http://github.terrehbyte.com"
 webmaster_realname: Terry Nguyen
 twitter_username: terrehbyte
 github_username:  terrehbyte
+paginate: 5
 
 # Build settings
 markdown: redcarpet
