--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: terrehbyte | Terry Nguyen
+title: terrehbyte
 email: terreh@terrehbyte.com
-description: "If you're reading this, then it means that I'm actually putting work into getting the Jekyll variant of my website working!"
+description: "Programming and game development notes written by a developer working on games in Unity3D and Unreal Engine."
 baseurl: ""
-url: "http://github.terrehbyte.com"
+url: "http://terrehbyte.com"
 webmaster_realname: Terry Nguyen
 twitter_username: terrehbyte
 github_username:  terrehbyte
