--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: terrehbyte
 email: terreh@terrehbyte.com
 description: "Programming and game development notes written by a developer working on games in Unity3D and Unreal Engine."
 baseurl: ""
-url: "http://terrehbyte.com"
+url: "https://terrehbyte.com"
 webmaster_realname: Terry Nguyen
 twitter_username: terrehbyte
 github_username:  terrehbyte
