Testing structured post data

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,12 @@ timezone: US/Pacific
 highlighter: pygments
 
 permalink: /:year/:month/:day/:title/
+
+# Defaults
+defaults:
+  -
+    scope:
+      path: ""      # empty string for all files
+      type: posts   # limit to posts
+    values:
+      is_post: true # automatically set is_post=true for all posts
