Clarify role and title for terrehbyte

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -136,7 +136,7 @@
     },
     {
         "projectname": "terrehbyte",
-        "role": "Creator",
+        "role": "Creator and Webmaster",
         "date": "2014 - Present",
         "imagepath": "/images/projects/terrehbyte.png",
         "description": "This started as a simple WordPress blog from my teenage days, but has since grown to encompass a log of my life as a developer. Its first major jump was from WordPress to Jekyll, which powers this site to this day. <br><br> I've made many revisions to its CSS and config since!",
