Update structured data items
I mimicked Medium's implementation at first, but I've corrected
the data to more accurately reflect the nature of this site.

Some values have been replaced with variables for so it can be
more readily adjusted to work for other users downstream.

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ url: "https://terrehbyte.com"
 webmaster_realname: Terry Nguyen
 twitter_username: terrehbyte
 github_username:  terrehbyte
+chrome_theme_color: '#0e0e0e'
+
+ga_tracking_id: UA-55657788-1
 
 authors:
   terrehbyte:
@@ -14,6 +17,7 @@ authors:
     display_name: terrehbyte
     twitter: terrehbyte
     github: terrehbyte
+    url: "https://terrehbyte.com"
 
 # Build settings
 safe: true
