Fix support for site.baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: terrehbyte
 email: terreh@terrehbyte.com
 description: "Programming and game development notes written by a developer working on games in Unity3D and Unreal Engine."
-baseurl: ""
+baseurl: "/test"
 url: "https://terrehbyte.com"
 webmaster_realname: Terry Nguyen
 twitter_username: terrehbyte
