Conform to Google's structured data requirements

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
 title: terrehbyte
+logo: "/favicon/favicon-310.png"
 email: terreh@terrehbyte.com
 description: "Programming and game development notes written by a developer working on games in Unity3D and Unreal Engine."
 baseurl: ""
