Tweaks for QoL and contrast

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "https://terrehbyte.com"
 webmaster_realname: Terry Nguyen
 twitter_username: terrehbyte
 github_username:  terrehbyte
+facebook_username: terreh
 chrome_theme_color: '#0e0e0e'
 
 authors:
