--- a/_data/projects.json
+++ b/_data/projects.json
@@ -8,7 +8,7 @@
         "links": [
             {
                 "header": "Website",
-                "data": "aie.edu/",
+                "data": "https://aie.edu/",
                 "display": "Web"
             }
         ]
