Rebrand e-mail addy contact

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: terrehbyte
 logo: "/favicon/favicon-310.png"
-email: terreh@terrehbyte.com
+email: terry@terrehbyte.com
 description: "Programming and game development notes written by a developer working on games in Unity3D and Unreal Engine."
 baseurl: ""
 url: "https://terrehbyte.com"
