--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/cactus"]
 	path = themes/cactus
-	url = git@github.com:terrehbyte/hugo-theme-cactus.git
+	url = https://github.com/terrehbyte/hugo-theme-cactus
