--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ copyright = "Copyright &copy; 2012-2021 Terry Nguyen" # cactus will use title if
 # googleAnalytics = "UA-1234-5"
 
 [params]
-  colortheme = "white" # dark, light, white, or classic
+  colortheme = "terry" # dark, light, white, classic, or terry (based on white)
   rss = true # generate rss feed. default value is false
   googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
   logo = "images/terry_irl_tiny.jpg"
