--- a/config.toml
+++ b/config.toml
@@ -27,19 +27,19 @@ copyright = "Terry Nguyen" # cactus will use title if copyright is not set
   """
   
   mainSection = "posts" # your main section
-  mainSectionLabel = "Recent Posts" # your main section heading label
-  showAllPostsOnHomePage = false # default
+  mainSectionTitle = "Recent Posts" # your main section heading label
+  showAllPostsOnHomePage = false # default to false
   postsOnHomePage = 5 # this option will be ignored if showAllPostsOnHomePage is set to true
-  tagsOverview = true # show tags overview by default.
+  tagsOverview = false # show tags overview by default.
   showProjectsList = false # show projects list by default (if projects data file exists).
   projectsUrl = "https://github.com/terrehbyte" # title link for projects list
 
   # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
-  dateFormat = "2006-01-02" # default
+  dateFormat = "2006-01-02" # default 2006-01-02
 
   # Post page settings
-  show_updated = false # default
-  showReadTime = false # default
+  show_updated = true # defaults to false
+  showReadTime = false # default to false
 
   #[params.comments]
    # enabled = false # default
