--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Terry Nguyen"
 theme = "cactus"
 copyright = "Terry Nguyen" # cactus will use title if copyright is not set
+enableEmoji = true
 
 # disqusShortname = "example" # Used when comments is enabled. Cactus will use site title if not set
 # googleAnalytics = "UA-55657788-1"
@@ -94,6 +95,11 @@ url = "/about-me"
 weight = 2
 
 [[menu.main]]
-name = "Archive"
-url = "/posts"
+name = "Projects"
+url = "/projects"
 weight = 3
+
+[[menu.main]]
+name = "Posts"
+url = "/posts"
+weight = 4
