--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/cactus"]
 	path = themes/cactus
-	url = https://github.com/terrehbyte/hugo-theme-cactus
+	url = https://codeberg.org/terrehbyte/hugo-theme-cactus
 [submodule "themes/hugo-admonitions"]
 	path = themes/hugo-admonitions
 	url = https://github.com/KKKZOZ/hugo-admonitions
